--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,15 +42,33 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"/>
 
+
+
+
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button2"
+        android:id="@+id/button7"
+        android:layout_width="140dp"
+        android:layout_height="60dp"
+        android:text="Exit"
+        android:textSize="16sp"
+        app:cornerRadius="12dp"
+        app:backgroundTint="#FA0303"
+        app:iconGravity="textStart"
+        app:iconPadding="12dp"
+        android:elevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/button10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="50dp"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button5"
         android:layout_width="0dp"
         android:layout_height="63dp"
-        android:text="Withdrawal"
+        android:text="Beneficiary Management"
         android:textSize="16sp"
         app:cornerRadius="12dp"
         app:backgroundTint="@color/primary_color"
-        app:icon="@drawable/ic_deposit"
         app:iconGravity="textStart"
         app:iconPadding="12dp"
         android:elevation="4dp"
@@ -62,18 +80,17 @@
         android:layout_marginEnd="24dp"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button3"
+        android:id="@+id/button6"
         android:layout_width="0dp"
         android:layout_height="63dp"
-        android:text="Amount Deposit"
+        android:text="Govt Loan Schemes"
         android:textSize="16sp"
         app:cornerRadius="12dp"
         app:backgroundTint="@color/primary_color"
-        app:icon="@drawable/ic_deposit"
         app:iconGravity="textStart"
         app:iconPadding="12dp"
         android:elevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/button2"
+        app:layout_constraintTop_toBottomOf="@id/button5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp"
@@ -81,19 +98,39 @@
         android:layout_marginEnd="24dp"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button4"
-        android:layout_width="140dp"
-        android:layout_height="60dp"
-        android:text="Exit"
+        android:id="@+id/button9"
+        android:layout_width="0dp"
+        android:layout_height="63dp"
+        android:text="Transfer money"
         android:textSize="16sp"
         app:cornerRadius="12dp"
-        app:backgroundTint="#FA0303"
+        app:backgroundTint="@color/primary_color"
         app:iconGravity="textStart"
         app:iconPadding="12dp"
         android:elevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/button3"
+        app:layout_constraintTop_toBottomOf="@id/button6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button10"
+        android:layout_width="0dp"
+        android:layout_height="63dp"
+        android:text="Transaction history "
+        android:textSize="16sp"
+        app:cornerRadius="12dp"
+        app:backgroundTint="@color/primary_color"
+        app:iconGravity="textStart"
+        app:iconPadding="12dp"
+        android:elevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/button9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
