--- a/app/src/main/res/layout/transfer.xml
+++ b/app/src/main/res/layout/transfer.xml
@@ -6,13 +6,13 @@
     android:padding="24dp"
     android:orientation="vertical"
     android:background="@drawable/gradient_background"
-    tools:context=".DepositActivity">
+    tools:context=".TransferActivity">
 
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Deposit Funds"
+        android:text="Money Transfer"
         android:textSize="28sp"
         android:textStyle="bold"
         android:textColor="@color/primary_text"
@@ -24,7 +24,7 @@
         android:id="@+id/editTextAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Amount"
+        android:hint="Enter Amount to Transfer"
         android:padding="20dp"
         android:inputType="numberDecimal"
         android:drawableStart="@drawable/ic_currency"
@@ -35,10 +35,10 @@
         android:layout_marginBottom="24dp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonDeposit"
+        android:id="@+id/sending"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Deposit"
+        android:text="Send money"
         android:textColor="@android:color/white"
         android:textSize="16sp"
         app:cornerRadius="12dp"
